--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <p>Nos reservamos el derecho de actualizar esta política. Cualquier cambio será publicado en esta página y se notificará dentro de la app si es relevante.</p>
 
   <h2>6. Contacto</h2>
-  <p>Si tienes alguna pregunta sobre esta Política de Privacidad, puedes escribirnos a: <a href="mailto:fredyapplecolombia@gmail.com">fredyapplecolombia@gmail.com</a></p>
+  <p>Si tienes alguna pregunta sobre esta Política de Privacidad, puedes escribirnos a: <a href="mailto:fredy113@gmail.com">fredyapplecolombia@gmail.com</a></p>
 
   <p>Gracias por confiar en Ideas Rápidas.</p>
 
